add syntax error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,15 +15,14 @@ stages:
 
 secret_detection:
   stage: CI
-  only:
-    - merge_requests
-    - main
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_COMMIT_BRANCH == 'main'
 
 sast: 
   stage: CI
-  only:
-    - merge_requests
-    - main
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_COMMIT_BRANCH == 'main'
+      
 
 validate-frontend:
   stage: CI
@@ -32,6 +31,6 @@ validate-frontend:
     - cd app/frontend
     - npm install
     - npm run build
-  only:
-    - merge_requests
-    - main
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_COMMIT_BRANCH == 'main'
+
