--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,6 +9,7 @@
     "watch": "tsc && vite build --watch"
   },
   "dependencies": {
+    "@dnb/eufemia": "^10.4.0",
     "@fluentui/react": "^8.105.3",
     "@fluentui/react-icons": "^2.0.195",
     "@react-spring/web": "^9.7.1",
