--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -3,3 +3,5 @@ azure-identity==1.13.0
 azure-search-documents==11.4.0b3
 azure-ai-formrecognizer==3.2.1
 azure-storage-blob==12.14.1
+gevent== 22.10.2
+gunicorn
