--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -12,7 +12,10 @@
     "@dnb/eufemia": "^10.4.0",
     "@fluentui/react": "^8.105.3",
     "@fluentui/react-icons": "^2.0.195",
+    "@mantine/core": "^6.0.16",
+    "@mantine/ds": "^6.0.16",
     "@react-spring/web": "^9.7.1",
+    "@tabler/icons-react": "^2.24.0",
     "dompurify": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
