trying out prettier

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,3 +42,7 @@ validate-app:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_COMMIT_BRANCH == 'main'
 
+lint:
+  stage: CI
+  script:
+    - npx prettier --check .
