make a new parameters file

--- a/infra/platypus-dev.env
+++ b/infra/platypus-dev.env
@@ -1,16 +1,16 @@
-AZURE_ENV_NAME="platypus"
+AZURE_ENV_NAME="cicd"
 AZURE_FORMRECOGNIZER_RESOURCE_GROUP="rg-platypus"
 AZURE_LOCATION="westeurope"
 AZURE_OPENAI_CHATGPT_DEPLOYMENT="chat"
 AZURE_OPENAI_GPT_DEPLOYMENT="davinci"
 AZURE_OPENAI_RESOURCE_GROUP="rg-platypus"
-AZURE_RESOURCE_GROUP="rg-platypus"
+AZURE_RESOURCE_GROUP="cicd-platypus"
 AZURE_SEARCH_INDEX="gptkbindex"
-AZURE_SEARCH_SERVICE="gptkb-xxhi5srdy7fak"
+AZURE_SEARCH_SERVICE="gptkb-cicd"
 AZURE_SEARCH_SERVICE_RESOURCE_GROUP="rg-platypus"
-AZURE_STORAGE_ACCOUNT="stxxhi5srdy7fak"
+AZURE_STORAGE_ACCOUNT="stcicd"
 AZURE_STORAGE_CONTAINER="content"
 AZURE_STORAGE_RESOURCE_GROUP="rg-platypus"
 AZURE_SUBSCRIPTION_ID="564df8bf-50ab-4917-8082-b363158428c2"
 AZURE_TENANT_ID="4cbfea0a-b872-47f0-b51c-1c64953c3f0b"
-BACKEND_URI="https://app-backend-xxhi5srdy7fak.azurewebsites.net"
+BACKEND_URI="https://app-backend-cicd.azurewebsites.net"
