--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,6 @@ deploy:
     - azd auth login --client-id $AZURE_DEPLOY_CLIENT_ID --tenant-id $DNB_AZURE_TENANT_ID --client-secret $AZURE_DEPLOY_CLIENT_SECRET
     # - az login --service-principal -u $AZURE_DEPLOY_CLIENT_ID -p $AZURE_DEPLOY_CLIENT_SECRET --tenant $DNB_AZURE_TENANT_ID
     - source infra/platypus-dev.env
-    - azd up
+    - azd up -e cicd --no-prompt
   rules:
     - if: $CI_PIPELINE_SOURCE == 'web' || $CI_COMMIT_BRANCH == 'main'
